--- a/src/main/webapp/hr/hr_salary_cycle.xhtml
+++ b/src/main/webapp/hr/hr_salary_cycle.xhtml
@@ -53,10 +53,10 @@
                                     <p:calendar value="#{salaryCycleController.current.salaryAdvanceFromDate}" pattern="dd MMMM yyyy" />
                                     <h:outputText  value="Salary Advance To Date " ></h:outputText>
                                     <p:calendar value="#{salaryCycleController.current.salaryAdvanceToDate}" pattern="dd MMMM yyyy" />
-                                    <h:outputText  value="Worked From Date " ></h:outputText>
+                                    <h:outputText  value="OT From Date " ></h:outputText>
                                     <p:calendar value="#{salaryCycleController.current.workedFromDate}" 
                                                 pattern="dd MMMM yyyy hh:mm:ss a" />
-                                    <h:outputText  value="Worked To Date " ></h:outputText>
+                                    <h:outputText  value="OT To Date " ></h:outputText>
                                     <p:calendar value="#{salaryCycleController.current.workedToDate}"
                                                 pattern="dd MMMM yyyy hh:mm:ss a" />
                                      <h:outputText  value="Day off / PH  From Date " ></h:outputText>
