--- a/src/main/webapp/hr/hr_staff_paysheet_component_all.xhtml
+++ b/src/main/webapp/hr/hr_staff_paysheet_component_all.xhtml
@@ -240,6 +240,12 @@
                                 </p:cellEditor>
 
                             </p:column>
+<!--                            <p:column headerText="Creater" >
+                                <f:facet name="header">
+                                    <h:outputLabel value="Creater"  />
+                                </f:facet>
+                                <h:outputLabel value="#{i.creater.webUserPerson.name}"/>
+                            </p:column>-->
 
                             <p:column style="width:6%" exportable="false" >  
                                 <p:rowEditor />  
