--- a/src/main/webapp/hr/hr_report_staff_salary.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_salary.xhtml
@@ -47,11 +47,20 @@
                     <h:outputLabel value="All Staff Salary Summary"></h:outputLabel><br></br>
                     <h:outputLabel value="#{salaryCycleController.current.name}"></h:outputLabel>
                 </f:facet>
+
+
                 <p:column headerText="Name" >
                     <f:facet name="header">
                         <h:outputLabel value="Name"></h:outputLabel>
                     </f:facet>
-                    <h:outputLabel value="#{scc.staff.person.nameWithTitle}" ></h:outputLabel>
+                    <h:outputLabel value="#{scc.staff.person.nameWithTitle}"></h:outputLabel>                    
+                </p:column>
+
+                <p:column headerText="Department" >
+                    <f:facet name="header">
+                        <h:outputLabel value="Department"></h:outputLabel>
+                    </f:facet>
+                    <h:outputLabel value="#{scc.staff.department.name}" ></h:outputLabel>
                     <f:facet name="footer">
                         <h:outputLabel value="Total"></h:outputLabel>
                     </f:facet>
