--- a/src/main/webapp/hr/hr_staff_paysheet_component_all_performace_allovance_percentatge.xhtml
+++ b/src/main/webapp/hr/hr_staff_paysheet_component_all_performace_allovance_percentatge.xhtml
@@ -133,16 +133,61 @@
                             <p:commandButton ajax="false" value="Fill" action="#{staffPaySheetComponentAllPerformancePercentageController.createStaffPaysheetComponent}" ></p:commandButton>
                         </h:panelGrid>
                     </h:panelGrid>
-                    <p:panel id="Allperformancepid">
+                    <p:panel id="Allperformancepid" styleClass="noBorder summeryBorder">
 
                         <p:dataTable  value="#{staffPaySheetComponentAllPerformancePercentageController.items}"  id="stb2"
                                       var="i"  editable="true"
                                       rowStyleClass="#{i.exist eq true ? 'exist':null}"
                                       selection="#{staffPaySheetComponentAllPerformancePercentageController.selectedStaffComponent}" 
-                                      rowKey="#{i.id}"  >
+                                      rowKey="#{i.id}" rowIndexVar="a"  >
                             <p:ajax event="rowEdit" listener="#{staffPaySheetComponentAllPerformancePercentageController.onEdit}" />
+                            <f:facet name="header">
+                                <h:outputLabel value="Performance Allowance Percentage"/>
+                            </f:facet>
+                            <p:column  selectionMode="multiple" styleClass="noPrintButton" >                            
+                            </p:column>
+                            
+                            <p:column headerText="No">
+                                <f:facet name="header">
+                                    <h:outputLabel value="No"/>
+                                </f:facet>
+                                <h:outputLabel value="#{a+1}" >
+                                </h:outputLabel>
+                            </p:column>
 
-                            <p:column  selectionMode="multiple" >                            
+                            <p:column headerText="Institution" sortBy="#{i.staff.workingDepartment.institution.name}"  >
+                                <f:facet name="header" >
+                                    <h:outputLabel value="Institution"  />
+                                </f:facet>
+                                <h:outputLabel value="#{i.staff.workingDepartment.institution.name}" ></h:outputLabel>
+                            </p:column>
+                            <p:column headerText="Department" sortBy="#{i.staff.workingDepartment.name}" >
+                                <f:facet name="header" >
+                                    <h:outputLabel value="Department"  />
+                                </f:facet>
+
+                                <h:outputLabel value="#{i.staff.workingDepartment.name}" ></h:outputLabel>
+                            </p:column>
+                            <p:column headerText="Roster"  >
+                                <f:facet name="header">
+                                    <h:outputLabel value="Roster"  />
+                                </f:facet>
+                                <h:outputLabel value="#{i.staff.roster.name}" ></h:outputLabel>
+                            </p:column>
+                            <p:column headerText="EMP Code" sortBy="#{i.staff.codeInterger}" >
+                                <f:facet name="header">
+                                    <h:outputLabel value="EMP Code"  />
+                                </f:facet>
+                                <h:outputLabel value="#{i.staff.code}" ></h:outputLabel>
+                            </p:column>
+                            <p:column headerText="componentType" rendered="false">
+                                <f:facet name="header">
+                                    <h:outputLabel value="componentType"  />
+                                </f:facet>
+                                <h:outputLabel value="#{i.paysheetComponent.componentType}"/>
+                            </p:column>
+                            <p:column headerText="Roster">
+                                <h:outputLabel value="#{i.staff.roster.name}"/>
                             </p:column>
 
                             <p:column headerText="From"  >
@@ -152,7 +197,7 @@
                                 <p:cellEditor>  
                                     <f:facet name="output">
                                         <h:outputLabel value="#{i.fromDate}">
-                                            <f:convertDateTime pattern="dd MM yyyy"/>
+                                            <f:convertDateTime pattern="dd MMMM yyyy"/>
                                         </h:outputLabel>
                                     </f:facet>
                                     <f:facet name="input">
@@ -167,7 +212,7 @@
                                 <p:cellEditor>  
                                     <f:facet name="output">
                                         <h:outputLabel value="#{i.toDate}">
-                                            <f:convertDateTime pattern="dd MM yyyy"/>
+                                            <f:convertDateTime pattern="dd MMMM yyyy"/>
                                         </h:outputLabel>
                                     </f:facet>
                                     <f:facet name="input">
@@ -177,20 +222,6 @@
 
                             </p:column>
 
-                            <p:column headerText="Staff Code" >
-                                <f:facet name="header">
-                                    <h:outputLabel value="Staff Code"  />
-                                </f:facet>
-                                <h:outputLabel value="#{i.staff.code}"/>
-                            </p:column>
-
-                            <p:column headerText="Staff" >
-                                <f:facet name="header">
-                                    <h:outputLabel value="Staff"  />
-                                </f:facet>
-                                <h:outputLabel value="#{i.staff.person.nameWithTitle}"/>
-                            </p:column>
-
                             <p:column headerText="Grade" >
                                 <f:facet name="header">
                                     <h:outputLabel value="Grade"  />
@@ -198,43 +229,32 @@
                                 <h:outputLabel value="#{i.staff.grade.name}"/>                           
                             </p:column>
 
-                            <p:column headerText="Category">
+                            <p:column headerText="Category" >
                                 <f:facet name="header">
                                     <h:outputLabel value="Category"  />
                                 </f:facet>
                                 <h:outputLabel value="#{i.staff.staffCategory.name}"/>
                             </p:column>
 
-                            <p:column headerText="Designtion">
+                            <p:column headerText="Designtion" >
                                 <f:facet name="header">
                                     <h:outputLabel value="Designtion"  />
                                 </f:facet>
                                 <h:outputLabel value="#{i.staff.designation.name}"/>
                             </p:column>
-
-                            <p:column headerText="Institution">
+                            <p:column headerText="Resign Date" >
                                 <f:facet name="header">
-                                    <h:outputLabel value="Institution"  />
+                                    <h:outputLabel value="Resign Date"  />
                                 </f:facet>
-                                <h:outputLabel value="#{i.staff.workingDepartment.institution.name}"/>
+                                <h:outputLabel value="#{i.staff.dateLeft}">
+                                    <f:convertDateTime pattern="dd MMMM yyyy"/>
+                                </h:outputLabel>
                             </p:column>
-                            <p:column headerText="Department">
+                            <p:column headerText="Staff" >
                                 <f:facet name="header">
-                                    <h:outputLabel value="Department"  />
+                                    <h:outputLabel value="Staff"  />
                                 </f:facet>
-                                <h:outputLabel value="#{i.staff.workingDepartment.name}"/>
-                            </p:column>
-                            <p:column headerText="Component Type">
-                                <f:facet name="header">
-                                    <h:outputLabel value="componentType"  />
-                                </f:facet>
-                                <h:outputLabel value="#{i.paysheetComponent.componentType}"/>
-                            </p:column>
-                            <p:column headerText="Roster">
-                                <f:facet name="header">
-                                    <h:outputLabel value="Roster"  />
-                                </f:facet>
-                                <h:outputLabel value="#{i.staff.roster.name}"/>
+                                <h:outputLabel value="#{i.staff.person.nameWithTitle}"/>
                             </p:column>
                             <p:column headerText="Value" >
                                 <f:facet name="header">
@@ -253,11 +273,11 @@
 
                             </p:column>
 
-                            <p:column style="width:6%"  exportable="false">  
+                            <p:column style="width:6%"  exportable="false" styleClass="noPrintButton">  
                                 <p:rowEditor />  
                             </p:column>  
 
-                            <p:column style="width:6%" exportable="false">  
+                            <p:column style="width:6%" exportable="false" styleClass="noPrintButton">  
                                 <p:commandButton ajax="false" value="Remove" action="#{staffPaySheetComponentAllPerformancePercentageController.remove}" onclick="onSubmitButton();">
                                     <f:setPropertyActionListener target="#{staffPaySheetComponentAllPerformancePercentageController.current}" value="#{i}" />
                                 </p:commandButton>
