--- a/src/main/webapp/hr/hr_staff_paysheet_component_individual.xhtml
+++ b/src/main/webapp/hr/hr_staff_paysheet_component_individual.xhtml
@@ -51,8 +51,8 @@
                 <p:spacer height="30" />
                 <p:panel >
                     <f:facet name="header" >   
-                          <h:outputLabel value="Paysheet Component individual" style="text-transform:uppercase;" />
-                        
+                        <h:outputLabel value="Paysheet Component individual" style="text-transform:uppercase;" />
+
                     </f:facet>
                     <h:panelGrid columns="2" >
                         <h:outputLabel value="From : " />
@@ -87,63 +87,51 @@
                             <p:printer target="individualpanel" ></p:printer>
                         </p:commandButton>  </h:panelGrid>
 
-                    <p:panel  id="individualpanel">
+                    <p:panel  id="individualpanel" styleClass="noBorder summeryBorder">
                         <p:dataTable id="tb6" value="#{staffPaySheetComponentController.items}" 
                                      filteredValue="#{staffPaySheetComponentController.filteredStaff}"
-                                     var="i" scrollHeight="200"  editable="true" >
-
-
-
+                                     var="i" editable="true" rowIndexVar="a" >
 
                             <f:facet name="header">
-                                <h:outputLabel value="#{staffPaySheetComponentController.current.staff.person.nameWithTitle}"/>
+                                <h:outputLabel value="#{staffPaySheetComponentController.paysheetComponent.name}"/>
                             </f:facet>
 
                             <p:ajax event="rowEdit" listener="#{staffPaySheetComponentController.onEdit}" />  
 
 
-                            <p:column headerText="Staff" >  
+                            <p:column headerText="No">
                                 <f:facet name="header">
-                                    <h:outputLabel value="Staff"  />
+                                    <h:outputLabel value="No"/>
                                 </f:facet>
-
-                                <h:outputLabel value="#{i.staff.person.name}" >
+                                <h:outputLabel value="#{a+1}" >
                                 </h:outputLabel>
                             </p:column>
 
-                            <p:column headerText="Code" > 
-                                <f:facet name="header">
-                                    <h:outputLabel value="Code"  />
-                                </f:facet>  
-                                <h:outputLabel value="#{i.staff.codeInterger}" >
-
-                                </h:outputLabel>
-                            </p:column>
-                            <p:column headerText="Institution"  >
-                                <f:facet name="header">
+                            <p:column headerText="Institution" sortBy="#{i.staff.workingDepartment.institution.name}"  >
+                                <f:facet name="header" >
                                     <h:outputLabel value="Institution"  />
                                 </f:facet>
-                                <h:outputLabel value="#{i.staff.workingDepartment.institution.name}" >
-
-                                </h:outputLabel>
+                                <h:outputLabel value="#{i.staff.workingDepartment.institution.name}" ></h:outputLabel>
                             </p:column>
-                            <p:column headerText="Department"  >
-                                <f:facet name="header">
+                            <p:column headerText="Department" sortBy="#{i.staff.workingDepartment.name}" >
+                                <f:facet name="header" >
                                     <h:outputLabel value="Department"  />
                                 </f:facet>
-                                <h:outputLabel value="#{i.staff.workingDepartment.name}" >
 
-                                </h:outputLabel>
+                                <h:outputLabel value="#{i.staff.workingDepartment.name}" ></h:outputLabel>
                             </p:column>
-                            <p:column headerText="Roster" >
+                            <p:column headerText="Roster"  >
                                 <f:facet name="header">
                                     <h:outputLabel value="Roster"  />
                                 </f:facet>
-                                <h:outputLabel value="#{i.staff.roster.name}" >
-
-                                </h:outputLabel>
+                                <h:outputLabel value="#{i.staff.roster.name}" ></h:outputLabel>
                             </p:column>
-
+                            <p:column headerText="EMP Code" sortBy="#{i.staff.codeInterger}" >
+                                <f:facet name="header">
+                                    <h:outputLabel value="EMP Code"  />
+                                </f:facet>
+                                <h:outputLabel value="#{i.staff.code}" ></h:outputLabel>
+                            </p:column>
                             <p:column headerText="From" >
                                 <f:facet name="header">
                                     <h:outputLabel value="From"  />
@@ -180,8 +168,42 @@
                                     </f:facet>
                                 </p:cellEditor>
                             </p:column>
+                            <p:column headerText="Grade" >
+                                <f:facet name="header">
+                                    <h:outputLabel value="Grade"  />
+                                </f:facet>
+                                <h:outputLabel value="#{i.staff.grade.name}"/>                           
+                            </p:column>
 
-                            <p:column headerText="Component" >
+                            <p:column headerText="Category" >
+                                <f:facet name="header">
+                                    <h:outputLabel value="Category"  />
+                                </f:facet>
+                                <h:outputLabel value="#{i.staff.staffCategory.name}"/>
+                            </p:column>
+
+                            <p:column headerText="Designtion" >
+                                <f:facet name="header">
+                                    <h:outputLabel value="Designtion"  />
+                                </f:facet>
+                                <h:outputLabel value="#{i.staff.designation.name}"/>
+                            </p:column>
+                            <p:column headerText="Resign Date" >
+                                <f:facet name="header">
+                                    <h:outputLabel value="Resign Date"  />
+                                </f:facet>
+                                <h:outputLabel value="#{i.staff.dateLeft}">
+                                    <f:convertDateTime pattern="dd MMMM yyyy"/>
+                                </h:outputLabel>
+                            </p:column>
+                            <p:column headerText="Staff" >
+                                <f:facet name="header">
+                                    <h:outputLabel value="Staff"  />
+                                </f:facet>
+                                <h:outputLabel value="#{i.staff.person.nameWithTitle}"/>
+                            </p:column>
+
+                            <p:column headerText="Component" rendered="false" >
                                 <f:facet name="header">
                                     <h:outputLabel value="Component"  />
                                 </f:facet>
@@ -219,11 +241,11 @@
 
                             </p:column>
 
-                            <p:column style="width:6%"  exportable="false">  
+                            <p:column style="width:6%"  exportable="false" styleClass="noPrintButton">  
                                 <p:rowEditor />  
                             </p:column>  
 
-                            <p:column style="width:6%" exportable="false">  
+                            <p:column style="width:6%" exportable="false" styleClass="noPrintButton">  
                                 <p:commandButton ajax="false" value="Remove" action="#{staffPaySheetComponentController.remove}" onclick="onSubmitButton();">
                                     <f:setPropertyActionListener target="#{staffPaySheetComponentController.removingEntry}" value="#{i}" />
                                 </p:commandButton>
