--- a/src/main/webapp/hr/hr_staff_salary.xhtml
+++ b/src/main/webapp/hr/hr_staff_salary.xhtml
@@ -65,7 +65,7 @@
                 </p:tab>
                 <p:tab title="Staff List" >
 
-                    <p:commandButton ajax="false" value="Fill Staff" action="#{staffController.createActiveStaffTable(staffSalaryController.salaryCycle.workedFromDate )}" onclick="onSubmitButton();"/>
+                    <p:commandButton ajax="false" value="Fill Staff" action="#{staffController.createActiveStaffTable(staffSalaryController.salaryCycle.dayOffPhFromDate)}" onclick="onSubmitButton();"/>
                     <h:panelGrid columns="2"> 
                         <h:outputLabel value="Employee : "/>
                         <hr:completeStaff value="#{staffController.reportKeyWord.staff}"/>
