--- a/src/main/webapp/hr/hr_report_finger_print_record_logged.xhtml
+++ b/src/main/webapp/hr/hr_report_finger_print_record_logged.xhtml
@@ -43,7 +43,7 @@
                         <p:commandButton value="Print" ajax="false" action="#" >
                             <p:printer target="gpBillPreview" ></p:printer>
                         </p:commandButton>
-                        <p:panel id="gpBillPreview" >                     
+                        <p:panel id="gpBillPreview" styleClass="noBorder summeryBorder" >                     
                             <p:dataTable id="tb1" value="#{hrReportController.fingerPrintRecords}" var="ss">                               
                                 <p:column headerText="Emp No">
                                       <f:facet name="header">
