Signed-off-by: lahirumadushanka <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -86,7 +86,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Payment Report" action="/channel/channel_payment_report"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Payment Report By Session" action="/channel/channel_payment_report_by_session"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Payment Report By Session Date" action="/channel/channel_payment_report_by_date"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Un-Paid Report By Session Date" action="/channel/channel_payment_report_by_date"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Un-Paid Report" action="/channel/channel_unpaid_report"/>
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
